Refactor mcp test cases